--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,6 @@ project smote.ipynb
 project smote.ipynb
 project tfidf.ipynb
 project.ipynb
+spreadBottom.png
+spreadsheet.png
+spreadsheetTop.png
